--- a/src/common.css
+++ b/src/common.css
@@ -28,27 +28,27 @@
 }
 
 .custom-scroll::-webkit-scrollbar {
-	width: 12px;
+	width: 8px;
 }
 .custom-scroll::-webkit-scrollbar-track {
 	background: #2F2F37;
 }
 .custom-scroll::-webkit-scrollbar-thumb {
 	background: #8585AD;
-	border: 3px solid #2F2F37;
-	border-radius: 6px;
+	/* border: 0 solid #2F2F37; */
+	/* border-radius: 0; */
 }
 
 .body::-webkit-scrollbar {
-	width: 12px;
+	width: 8px;
 }
 .body::-webkit-scrollbar-track {
 	background: #2F2F37;
 }
 .body::-webkit-scrollbar-thumb {
 	background: #8585AD;
-	border: 3px solid #2F2F37;
-	border-radius: 6px;
+	/* border: 0 solid #2F2F37;
+	border-radius: 0; */
 }
 
 body {
