--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,6 +1,7 @@
 .content {
   margin: 0 auto;
-  display: flex;
-  width: 1240px;
-  justify-content: space-between;
+  display: grid;
+  column-gap: 40px;
+  grid-template-columns: repeat(2, 600px);
+  justify-content: center;
 }
