--- a/src/components/burgerIngredients/burgerIngredients.module.css
+++ b/src/components/burgerIngredients/burgerIngredients.module.css
@@ -1,9 +1,14 @@
 .menu {
   margin: 0;
   padding: 0;
-  max-height: calc(100vh - 284px);
+  max-height: calc(100vh - 244px);
   overflow-y: auto;
   scrollbar-gutter: stable;
+}
+
+.menu::-webkit-scrollbar-track {
+  margin-top: 40px;
+	margin-bottom: 52px;
 }
 
 .section {
@@ -16,7 +21,6 @@
   column-gap: 24px;
   row-gap: 32px;
   margin-top: 0;
-  margin-bottom: 0;
   padding-left: 0;
 }
 
@@ -24,4 +28,3 @@
   display: block;
   list-style: none;
 }
-
