--- a/src/components/burgerConstructor/burgerConstructor.module.css
+++ b/src/components/burgerConstructor/burgerConstructor.module.css
@@ -3,13 +3,21 @@
   padding-bottom: 52px;
 }
 
-.constructor ul {
+.fills {
   margin: 0;
   padding: 0 8px 0 16px;
   overflow-y: auto;
   scrollbar-gutter: stable;
 }
 
+.fills::-webkit-scrollbar {
+	width: 8px;
+}
+
+.fills::-webkit-scrollbar-thumb {
+  border: none;
+  border-radius: 0;
+}
 
 .elements {
   height: calc(100vh - 344px);
