--- a/src/components/burgerIngredients/burgerIngredients.module.css
+++ b/src/components/burgerIngredients/burgerIngredients.module.css
@@ -10,3 +10,12 @@
   margin-top: 40px;
 	margin-bottom: 52px;
 }
+
+.menu::-webkit-scrollbar {
+	width: 8px;
+}
+
+.menu::-webkit-scrollbar-thumb {
+  border: none;
+  border-radius: 0;
+}
