refactor store for sorting

--- a/src/components/constructor-row/constructor-row.module.css
+++ b/src/components/constructor-row/constructor-row.module.css
@@ -1,12 +1,16 @@
-.ingredient {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.wrapper {
   padding: 0;
   list-style: none;
 }
 
-.ingredient > svg {
+.wrapper_dropHover {
+  opacity: 0.5;
+}
+
+.ingredient {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   cursor: grab;
 }
 
